# ruby-interconnect-performance

./: .gitignore  CMakeLists.txt  generate_test_data.py  performance_after.txt  performance_after_big.txt  performance_before.txt  performance_before_big.txt  performance_before_big2.txt  validate_results.py
include/: Interconnect.hpp  Range.hpp
src/: Interconnect.cpp  Range.cpp  main.cpp
